Kolan/wwwroot/scss/components/dialog.scss
@import "../common";
@import "../mixins";

:host {
    width: 100%;
    height: 100%;

    font-family: "Inter", sans-serif;
}

@include ui-elements(1em);

input[type="text"], textarea {
    width: 100%;
}

input[type="color"] {
    display: inline-block;
    margin-left: 10px;
    transform: translateY(7px);
}

.dialog {
    position: absolute;
    width: 800px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    padding: 20px 60px 40px 60px;
    box-sizing: border-box;
    border-radius: 3px;
    box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 0.1);
    z-index: 1001;

    h2 {
        font-size: 2.1em;
        margin-top: 21px;
    }

    p {
        font-size: 1.2em;
        margin-bottom: 10px;
    }

    .submit, .cancel {
        float: right;
        margin-top: 10px;
        margin-left: 10px;
    }
}

.dialogBackground {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: black;
    opacity: 0.4;
    z-index: 1000;
}

.dialog.disposable {
    width: 600px;
    z-index: 1003;
}

.dialogBackground.disposable {
    z-index: 1002;
}

.error {
    color: red;
}

@media screen and (max-width: 1000px) {
    .dialog {
        top: 0;
        left: 0;
        transform: none;
        border-radius: 0;
        width: 100%;
        min-height: 100vh;
    }
}

